--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Alejandro S. Borlaff"
-  avatar           : "u8MUpucT_400x400.jpg"
+  avatar           : "images/u8MUpucT_400x400.jpg"
   bio              : "Astrophysicist with background in galactic and extragalactic research. Skilled in data analysis and statistics. Large experience with observational methods and instrumentation. I have participated in more than 50 observing nights. Aiming to participate in space science research missions."
   location         : "Spain"
   employer         : "Instituto de Astrofísica de Canarias"
