--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/alejandro-borlaff-716602b1/"
+  linkedin         : "www.linkedin.com/in/alejandro-borlaff/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
