--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   instagram        :
   lastfm           :
   linkedin         : "www.linkedin.com/in/alejandro-borlaff/"
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-5215-5958"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
