--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-UK"
-title                    : "Alejandro S. Borlaff / Personal webpage"
+title                    : "Personal webpage"
 title_separator          : "-"
 name                     : &name "Alejandro S. Borlaff"
 description              : &description "PhD Astrophysics"
