--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Alejandro S. Borlaff"
   avatar           : "https://borlaff.github.io/images/aserrano.png"
-  bio              : "Astrophysicist with background in galactic and extragalactic research. Skilled in data analysis and statistics. Large experience with observational methods and instrumentation. I have participated in more than 50 observing nights. Aiming to participate in space science research missions."
+  bio              : ""
   location         : "Spain"
   employer         : "Instituto de Astrofísica de Canarias"
   googlescholar    :
