--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Alejandro S. Borlaff"
+  name             : "Alejandro Borlaff"
   avatar           : "https://borlaff.github.io/images/aserrano.png"
   bio              : ""
   location         : "Spain"
