--- a/_config.yml
+++ b/_config.yml
@@ -84,10 +84,11 @@ author:
   avatar           : "https://borlaff.github.io/images/aserrano.png"
   bio              : ""
   location         : "Spain"
-  employer         : "Instituto de Astrofísica de Canarias"
+  employer         : "Instituto de Astrofísica de Canarias - C/ Vía Láctea S/N - E38205 - La Laguna (Tenerife). España "
   googlescholar    :
   email            : asborlaff@gmail.com
   uri              :
+  nasa/ads         : "https://ui.adsabs.harvard.edu/#search/q=Borlaff&sort=date%20desc%2C%20bibcode%20desc&p_=0"
   bitbucket        :
   codepen          :
   dribbble         :
