--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "https://borlaff.github.io/images/aserrano.png"
   bio              : ""
   location         : "Spain"
-  employer         : [Instituto de Astrofísica de Canarias](http://www.iac.es/index.php?lang=en)
+  employer         : [Instituto de Astrofísica de Canarias|http://www.iac.es/index.php?lang=en]]
   googlescholar    :
   email            : asborlaff@gmail.com
   uri              :
