--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,24 @@
 # main links links
+
+# main links links
 main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Outreach"
+  - title: "Talks"
+    url: /talks/    
+
+  - title: "Teaching"
     url: /teaching/    
     
   - title: "Portfolio"
     url: /portfolio/
-      
+        
+  - title: "Blog Posts"
+    url: /year-archive/
+    
   - title: "CV"
     url: /cv/
+    
+  - title: "Guide"
+    url: /markdown/
