--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,21 +4,16 @@
 main:
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
+  - title: "Outreach"
+    url: /teaching/    
+
+  - title: "Instrumentation"
+    url: /markdown/
+
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+
