--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Personal webpage"
 title_separator          : "-"
 name                     : &name "Alejandro S. Borlaff"
 description              : &description "PhD Astrophysics"
-url                      : https://Borlaff.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://borlaff.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Borlaff/Borlaff.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. 
@@ -85,7 +85,7 @@ author:
   bio              : ""
   location         : "Spain"
   employer         : "Instituto de Astrofísica de Canarias"
-  googlescholar    :
+  googlescholar    : "https://scholar.google.es/citations?user=PjbZar0AAAAJ&hl=es&o"
   email            : asborlaff@gmail.com
   uri              :
   NASA_ADS         : "https://ui.adsabs.harvard.edu/#search/q=Borlaff&sort=date%20desc%2C%20bibcode%20desc&p_=0"
